# my_website

./: .dockerignore  .env  .env.localhost  .gitignore  .gitmodules  GEMINI.md  PIPELINE_FIXES_REPORT.md  README.md  SECURITY.md  build-dist.sh  build.sh  config.env  deps.nix  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  gemini_changes.txt  global.nix  go.mod  go.sum  index.html  package-lock.json  package.json  rollup.config.js  serve.sh  shell.nix  test_init.sql  tsconfig.json  version.ts  vite.config.ts
.github/workflows/: README.md  ci.yml  deploy.yml  pr-checks.yml  run_tests.yml  security.yml
admin/: README.md  angular.json  jest.config.js  package-lock.json  package.json  setup-jest.ts  tsconfig.json  tsconfig.spec.json  vite.config.ts
admin/src/: index.html
auth/admin/: angular.json  package-lock.json  vite.config.ts
auth/dev/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
auth/dev_auth/: index.html  package-lock.json  package.json  vite.config.ts
backend/: main.go
backend/go/: .env.localhost  main.go  main_test.go
database/: README.md  init.sql  run-sql.sh
database/migrations/: 001_add_ordering.sql
docker/: Dockerfile
e2e/: cypress.config.js  package-lock.json  package.json
frontend/: .env.localhost  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  vite.config.ts
frontend/admin/: angular.json  jest.config.js  package-lock.json  package.json  setup-jest.ts  tsconfig.json  vite.config.ts
frontend/locales/: emojis.ts  en.ts  es.ts  fr.ts
frontend/marketing/: .gitignore  .postcssrc.json  angular.json  package-lock.json  package.json  proxy.conf.json  set-env.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/old-site/: .env.localhost  package-lock.json  package.json  set-env.cjs  vite.config.ts
frontend/pkg/: src_rust.d.ts  src_rust.js  src_rust_bg.wasm  src_rust_bg.wasm.d.ts
frontend/src/: About.svelte  App.svelte  GithubIntegration.ts  GiveMeASine.svelte  Home.svelte  RepoChart.svelte  Repos.svelte  SystemDiagram.svelte  app.css  vite-env.d.ts
frontend/src-rust/: Cargo.toml
frontend/src-rust/src/: lib.rs
frontend/src-rust/src/magic_square/: gl_draw.rs  gl_program.rs  main.rs  settings.rs  ui_buffer.rs  ui_manifest.rs  worker.rs
frontend/src-rust/src/magic_square/geometry/: cool_s.rs  dodecahedron.rs  mod.rs  octahedron.rs  transformations.rs
frontend/src-rust/src/magic_synth/: main.rs  settings.rs
frontend/src-rust/src/public_square/: deser.rs  main.rs  mod.rs  ui_buffer.rs
frontend/src-rust/src/websocket/: mod.rs
gemini/: README.md
lifecycle/: backup.sh  build-dist.sh  build.sh  deploy-image.sh  e2e.sh  init.sh  kill.sh  serve.sh  teardown.sh  test.sh  update.sh
locales/: en.ts  es.ts  fr.ts
marketing/: GEMINI.md  README.md  angular.json  jest.config.js  package-lock.json  package.json  setup-jest.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
marketing/src/: index.html  styles.css
nixos/: configuration.nix  hardware-configuration.nix
nixos/lifecycle/: backup.sh  build-dist.sh  build.sh  deploy-image.sh  e2e.sh  kill.sh  serve.sh  teardown.sh  test.sh
old-site/: .env.localhost  package-lock.json  package.json  vite.config.ts
old-site/locales/: emojis.ts  fr.ts
old-site/src/: About.svelte  App.svelte  ViteMode.ts
old-site/src-rust/: Cargo.toml
pkg/: src_rust.d.ts  src_rust.js  src_rust_bg.wasm  src_rust_bg.wasm.d.ts
spec/: package-lock.json  package.json
spec_e2e/cypress/: package-lock.json  package.json
src/: About.svelte  App.svelte  GiveMeASine.svelte  Home.svelte  I18n.ts  app.css  bootstrap.ts  magicSquareWasm.js  main.ts
src-rust/: Cargo.toml
src-rust/src/: lib.rs  magic_square.rs
src-rust/src/magic_banner/: buffer.rs  main.rs  mod.rs
src-rust/src/magic_square/: animation.rs  buffer.rs  draw.rs  geometry.rs  gl_draw.rs  gl_program.rs  gl_shader.rs  gl_uniforms.rs  lfo.rs  main.rs  mod.rs  presets_default.rs  program_linker.rs  render.rs  settings.rs  shader_compiler.rs  traits.rs  transformations.rs  ui_buffer.rs  ui_manifest.rs  vertices.rs  worker.js  worker.rs
src-rust/src/magic_square/geometry/: cache.rs  cool_s.rs  cube.rs  dodecahedron.rs  empty.rs  geom.rs  hexagon.rs  icosahedron.rs  icosohedron.rs  mod.rs  ngon.rs  octahedron.rs  octohedron.rs  square.rs  star_five.rs  tetrahedron.rs  transformations.rs  triangle.rs  vertex_store.rs  vertices.rs
src/MagicSquare/: Container.svelte  ControlModule.svelte  ControlRack.svelte  Main.svelte  (+3 more)
(+597 files in other folders)
