[package]
name = "src-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.15.6"
wasm-bindgen = "0.2.86"
gloo-utils = { version = "0.1", features = ["serde"] }
js-sys = "0.3.61"
console_error_panic_hook = "0.1.7"
give_me_a_sine = { path = "give_me_a_sine" }

[dependencies.web-sys]
version = "0.3.61"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'MouseEvent',
  'Performance',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'Worker'
]
