[package]
name = "src-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.24.0"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
gloo-utils = { version = "0.1.7", features = ["serde"] }
js-sys = "0.3.85"
console_error_panic_hook = "0.1.7"
the_library = { path = "give_me_a_sine/the_library" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.5.0"

[dependencies.web-sys]
version = "0.3.85"
features = [
  'BinaryType',
  'Blob',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'DomRectReadOnly',
  'Element',
  'ErrorEvent',
  'Event',
  'EventTarget',
  'FileReader',
  "ProgressEvent",
  'HtmlCanvasElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'MessageEvent',
  'MouseEvent',
  'Performance',
  'ResizeObserver',
  'ResizeObserverEntry',
  'Storage',
  'StorageEvent',
  'StorageEventInit',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebSocket',
  'Window',
  'Worker'
]
